fix word wrap

--- a/styles/_use-cases.scss
+++ b/styles/_use-cases.scss
@@ -361,6 +361,7 @@ $custody-logos: "Gatehub", "Bitgo";
   font-family: "Work Sans";
   font-style: normal;
   font-weight: 700;
+  white-space: nowrap;
   font-size: 16px;
   margin-bottom: 0px;
 }
